<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:padding="@dimen/forget_layout_root_padding" >
    
    <View
        android:layout_width="0dip"
        android:layout_height="0dip"
        android:focusableInTouchMode="true"
        android:focusable="true" 
        />
    
    <RelativeLayout 
        android:id="@+id/layout_titlebar" 
		android:layout_width="match_parent"
       	android:layout_height="@dimen/forget_layout_titlebar_height" >
       
        <Button 
			android:id="@+id/btn_signin"
			android:layout_width="@dimen/forget_btn_signin_width" 
			android:layout_height="match_parent" 
			android:background="@android:color/transparent"
			android:text="@string/signup_signin_but"
			android:textSize="@dimen/forget_btn_signin_font_size"
			android:gravity="center_vertical"
			android:textColor="@drawable/transparent_button_color" />
        
        <TextView 
            android:id="@+id/text_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/forget_text_title_font_size"
            android:text="@string/forgot_title" />
    
    </RelativeLayout>
    
    <LinearLayout
        android:id="@+id/layout_content"
		android:orientation="vertical"
       	android:layout_width="match_parent"
       	android:layout_height="wrap_content" 
       	android:layout_marginTop="@dimen/forget_layout_content_topMargin" >
        
        <TextView 
            android:id="@+id/text_desc"
            android:layout_width="@dimen/forget_text_desc_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/forget_text_desc_bottomMargin" 
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textSize="@dimen/forget_text_desc_font_size"
            android:text="@string/forgot_desc" />
        
        <!-- email -->
        <LinearLayout 
			android:id="@+id/layout_email"
			android:layout_width="@dimen/forget_layout_email_width"
			android:layout_height="@dimen/forget_layout_email_height"
			android:layout_marginBottom="@dimen/forget_layout_email_bottomMargin"
			android:background="@drawable/signup_email_back">
      
		   <EditText 
				android:id="@+id/text_email"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:background="@null"
				android:textColor="@android:color/white"
				android:textColorHint="@android:color/white"
				android:layout_marginLeft="@dimen/forget_text_email_leftMargin"
				android:layout_marginRight="@dimen/forget_text_email_rightMargin"
				android:hint="@string/signup_email"
				android:textSize="@dimen/forget_text_email_font_size"
				android:inputType="textEmailAddress" />
      
		</LinearLayout>
		
        <!-- reset button -->
        <Button 
			android:id="@+id/btn_reset"
			android:layout_width="@dimen/forget_btn_reset_width" 
			android:layout_height="@dimen/forget_btn_reset_height" 
			android:layout_gravity="center_horizontal"
			android:background="@drawable/btn_forget_reset_bg"
			/>
        
	</LinearLayout>

</RelativeLayout>
